<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::disableForeignKeyConstraints();

        Schema::create('orders', function (Blueprint $table) {
            $table->id();
            $table->foreignId('customer_id')->constrained();
            $table->foreignId('location_id')->constrained();
            $table->enum('status', ["pending", "processing", "completed", "cancelled"]);
            $table->string('total_price');
            $table->boolean('isReturn')->default(false);
            $table->integer('return_id')->nullable();
            $table->string('eta')->nullable();
            $table->timestamps();
        });

        Schema::enableForeignKeyConstraints();
    }
    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('orders');
    }

};
